Surface Deform modifier doesn't indicate a successful bind, and shows a warning #58210

Closed
opened 2018-11-29 22:42:49 +01:00 by James Guilford · 6 comments

System Information
WIn10
gtx1080

Blender Version
2.80
26d5a3625e
2018-11-29

Short description of error
Surface deformer's Bind button doesn't switch to 'Unbind' to indicate a successful bind, warning thrown (at bottom of modifier)

Exact steps for others to reproduce the error

  • Duplicate a grid
  • Assign a surface deform modifier to first grid
  • Make the second grid the target mesh
  • Hit bind

The bind button doesn't update to say 'Unbind'
a warning is presented 'No valid target mesh'

However, the deformer seems to work in the 3D View if you go to edit mode and move verts on the target mesh

Edit: corrected the version date

**System Information** WIn10 gtx1080 **Blender Version** 2.80 26d5a3625ed 2018-11-29 **Short description of error** Surface deformer's Bind button doesn't switch to 'Unbind' to indicate a successful bind, warning thrown (at bottom of modifier) **Exact steps for others to reproduce the error** - Duplicate a grid - Assign a surface deform modifier to first grid - Make the second grid the target mesh - Hit bind The bind button doesn't update to say 'Unbind' a warning is presented 'No valid target mesh' However, the deformer seems to work in the 3D View if you go to edit mode and move verts on the target mesh Edit: corrected the version date
Author

Added subscriber: @fjg3d

Added subscriber: @fjg3d

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-12-04 11:24:46 +01:00

Yeah, binding is totally broken actually…

Yeah, binding is totally broken actually…

This issue was referenced by 71e2efc4ce

This issue was referenced by 71e2efc4ce6b760fe35edaf451e9cc803bc7c1a4

This issue was referenced by 484389cdcd

This issue was referenced by 484389cdcd6c8cbac9aaaae97bb4c7599a63a793

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58210
No description provided.